update swagger User
